# Ghost-Rust-Kernel-Module-PoC

./: DEVLOG.md  README.md
.devcontainer/: devcontainer.json
DOC/: RESEARCH.md
Doc/: KERNEL_MAP.md  RESEARCH.md
workspace/src/chrono-kernel-core/: .gitignore  .shim.o.d  Cargo.toml  Makefile  build.rs  rust-toolchain.toml  set_graph_function  shim.c  wrapper.h
workspace/src/chrono-kernel-core/.cargo/: config.toml
workspace/src/chrono-kernel-core/src/: ghost_core.rs  ghost_filter.rs  hook.rs  i18n.rs  json_loader.rs  json_wrapper.rs  lib.rs  telemetry_export.py  translation.rs  wrapper.c
